# Arisa

./: .envrc  .gitignore  Cargo.toml  README.md  confg.example.toml  flake.nix
datagen/: felixcloutier.go  go.mod
datagen/java/: go.mod  go.sum  jvm.go  jvm_instructions.json
datagen/x86/: felixcloutier.go  go.mod  go.sum  x86.json
src/: error.rs  main.rs
src/command/: mod.rs
src/command/crypto/: checksum.rs  hash.rs  mod.rs  uuid.rs
src/command/encoding/: base64.rs  endian.rs  mod.rs  rot.rs  timestamp.rs  url.rs
src/command/java/: jep.rs  mod.rs  opcode.rs
src/command/misc/: color.rs  github.rs  hawk_tuah.rs  help.rs  mod.rs
src/command/security/: cve.rs  mod.rs
src/config/: config.rs
src/listener/: message.rs  mod.rs
src/util/: command.rs  cooldown.rs  crypto.rs  embed.rs  logger.rs  mod.rs  quote.rs  status.rs
