[package]
name = "arisa"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6.1"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.12.4", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }

dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.18", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v1", "v4", "v7", "serde"] }
base64 = "0.22.1"
percent-encoding = "2.3.1"
sha2 = "0.10.9"
sha1 = "0.10.6"
md5 = "0.7.0"
blake3 = "1.8.2"
crc32fast = "1.4.2"
rand = "0.9.1"
anyhow = "1.0.98"
thiserror = "2.0.12"
indexmap = "2.9.0"
hex = "0.4.3"
urlencoding = "2.1.3"
alder = "0.10.0"
adler = "1.0.2"
iced-x86 = "1.21.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
